Working on responsiveness and bugs

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,18 +20,9 @@
 			<div class="row">
 				<div class="header-links">
 					
-					<div class="header-links-item"><a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><p>Developers</p></div>
-					<div class="header-links-item"><img src="/assets/images/icons/icnGetStarted_wh-sh.png"><p>Get Started!</p></div>
-					<div class="header-links-item"><img src="/assets/images/icons/icnAdOps_wh-sh.png"><p>Ad Ops</p></div>
-					<!--<div class="header-link-item">
-						<a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><p>Developers</p>
-					</div>
-					<div class="header-link-item">
-						<img src="/assets/images/icons/icnGetStarted_wh-sh.png"><p>Get Started!</p>
-					</div>
-					<div class="header-link-item">
-						<img src="/assets/images/icons/icnAdOps_wh-sh.png"><p>Ad Ops</p>
-					</div>-->
+					<div class="header-links-item"><a href="/developers.html"><img src="/assets/images/svg/icn_developers.svg"></a><p>Developers</p></div>
+					<div class="header-links-item"><a href="/prebid/prebidjs.html"><img src="/assets/images/svg/icn_getstarted.svg" class="large"></a><p>Get Started!</p></div>
+					<div class="header-links-item"><a href="/adops.html"><img src="/assets/images/svg/icn_adops.svg"></a><p>Ad Ops</p></div>
 				</div>
 			</div>
 			
@@ -44,8 +35,8 @@
 							<h2>The Benefits Of Using Prebid</h2>
 							
 							<div class="pb_home_belowfold_panel panel_left">
-								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnMonetization.png">
+								<div class="col-sm-3 highlight">
+									<img src="/assets/images/icons/icnMonetization.png" style="width="300px;">
 								</div>
 							
 								<div class="col-sm-8">
@@ -56,7 +47,7 @@
 							
 							<div class="pb_home_belowfold_panel panel_right">
 								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnMultiPlatform.png">
+									<img src="/assets/images/icons/icnMultiPlatform.png" class="pb_panel_img">
 								</div>
 							
 								<div class="col-sm-8">
@@ -69,7 +60,7 @@
 						
 							<div class="pb_home_belowfold_panel panel_left">
 								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnGetStarted.png">
+									<img src="/assets/images/icons/icnGetStarted.png" class="pb_panel_img">
 								</div>
 							
 								<div class="col-sm-8">
@@ -80,7 +71,7 @@
 							
 							<div class="pb_home_belowfold_panel panel_right">
 								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnOpenSource.png">
+									<img src="/assets/images/icons/icnBullhorn.png" class="pb_panel_img">
 								</div>
 							
 								<div class="col-sm-8">
