--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,8 +35,8 @@
 							<h2>The Benefits Of Using Prebid</h2>
 							
 							<div class="pb_home_belowfold_panel panel_left">
-								<div class="col-sm-3 highlight">
-									<img src="/assets/images/icons/icnMonetization.png" style="width="300px;">
+								<div class="col-sm-3">
+									<img src="/assets/images/icons/icnMonetization.png" class="pb_panel_img">
 								</div>
 							
 								<div class="col-sm-8">
@@ -71,7 +71,7 @@
 							
 							<div class="pb_home_belowfold_panel panel_right">
 								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnBullhorn.png" class="pb_panel_img">
+									<img src="/assets/images/icons/icnOpenSource.png" class="pb_panel_img">
 								</div>
 							
 								<div class="col-sm-8">
@@ -87,8 +87,7 @@
 				</div>
 				<!--end belowfold-->
 			</div>
-			<!--end row-->
-		
+			<!--end row-->		
 		
 		
 			<div class="row">
@@ -147,12 +146,14 @@
 		<!--end pb_homewrapper_content-->
 	</div>
 	<!--end wrapper-->
+	
+	<p></p>
+
+	{% include footer.html %}
 </div>
 <!--end homepage-->
     
-<p></p>
 
-{% include footer.html %}
 
   <!-- Template Main Javascript File -->
   <script src="/assets/js/main.js"></script>
