--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   color: #95a5a6;
   font-size: 40px;
+  padding-top: 0;
 }
 
 h3 {
@@ -311,6 +312,7 @@ button.list-group-item:focus {
 	position: relative;
 	float left;
 	width: 100%;
+	background-color: #d7731b;
 	
 }
 
@@ -373,8 +375,8 @@ button.list-group-item:focus {
 }
 
 .pb_home_belowfold_panel img { 
-	width: 60%;
-	height: 60%;
+	width: 100%;
+	height: 100%;
 	padding-left: 40px;
 	padding-top: 40px;
 }
@@ -464,7 +466,7 @@ button.list-group-item:focus {
 
 .partners img.standard { 
 	
-	width: 75px;
+	width: 125px;
 }
 
 .partners ul { 
@@ -605,11 +607,6 @@ button.list-group-item:focus {
 	.pb_home_belowfold_panel span { 
 		font-size: 15px;
 	}
-
-	.pb_home_belowfold_panel img { 
-		width: 100%;
-		height: 100%;
-	}
 	
 	.carousel { 
 		width: 75%;
@@ -667,6 +664,12 @@ button.list-group-item:focus {
 		width: 45%;
 		height: 45%;
 	}
+
+	.header-links-item img.large { 
+		width: 50%;
+		height: 50%;
+		margin-top: -25px;
+	}
 	
 	.header-links p { 
 		font-size: 24px;
@@ -680,10 +683,7 @@ button.list-group-item:focus {
 		margin-top: 20px;
 	}
 	
-	.pb_panel_img { 
-		width: 65%;
-		height: 65%;
-	}
+	
 	
 	.pb_home_belowfold_panel h3 { 
 		font-size: 18px;
@@ -696,10 +696,8 @@ button.list-group-item:focus {
 	}
 
 	.pb_home_belowfold_panel img { 
-		width: 60%;
-		height: 60%;
-		padding-left: 4px;
-		padding-top: 4px;
+		width: 80%;
+		height: 80%;
 	}
 	
 	.pb_home_belowfold_contentbox h2 { 
@@ -948,10 +946,10 @@ button.list-group-item:focus {
 
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 414px) {
 	
 	.pb_homewrapper_content { 
-		margin-top: 0px;
+		margin-top: -20px;
 	}
 	
 	.pb_homewrapper_content h1 { 
@@ -963,9 +961,16 @@ button.list-group-item:focus {
 		width: 75%;
 	}
 	
-	.header-links img { 
-		width: 30%;
-		height: 30%;
+	.header-links-item img { 
+		width: 50%;
+		height: 50%;
+	
+	}
+
+	.header-links-item img.large { 
+		width: 55%;
+		height: 55%;
+		margin-top: -20px;
 	}
 	
 	.header-links { 
@@ -976,10 +981,41 @@ button.list-group-item:focus {
 		font-size: 18px;
 	}
 	
-	.pb_panel_img { 
-		width: 45%;
-		height: 45%;
+	.pb_home_belowfold {
+		margin-top: 0px;
 	}
+	
+	.pb_home_belowfold_panel { 
+		width: 100%;
+		padding: 0;
+		margin:0;
+	}
+	
+	.pb_home_belowfold_panel img { 
+		width: 25%;
+		height: 25%;
+	}
+	
+	.pb_home_belowfold_panel h3 { 
+		font-size: 15px;
+	}
+
+	.pb_home_belowfold_panel span { 
+		font-size: 12px;
+	}
+	
+	.panel_right { 
+		float: left;
+	}
+	
+	.carousel { 
+		width: 85%;
+	}
+	
+	.carousel h4 {
+		font-size: 12px;
+	}
+
 	
 	.pb_footer { 
 		display: block;
