Fixed more md pages

--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -50,8 +50,8 @@
                 </div>-->
                 
                 <!-- Main content -->
-                <div class="col-md-9">
-                    <div class="bs-docs-section" markdown="1">
+                <div class="col-sm-9 pb-content" markdown="1">
+                    <div>
 
                         <h1>{{ page.description }}</h1> 
 
