--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -63,5 +63,9 @@
 	{% include footer.html %}
 {% endif %}
 
+    <script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/bootstrap.js"></script>
+    <script src="{{site.baseurl}}/assets/js/bootbox.min.js"></script>
+
 
 
