--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1286,6 +1286,10 @@ table.jsfiddle-line-number .line-number {
   padding-left:10px;
 }
 
+.cellpadding td {
+  padding:20px
+}
+
 #example-tab li {
   margin-bottom: 6px;
 }
