--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,60 +30,78 @@
 			<div class="row">
 				<div class="pb_home_belowfold">
 					<div class="col-lg-12">
-						<div class="pb_home_belowfold_contentbox">
-							
-							<h2>The Benefits Of Using Prebid</h2>
-							
-							<div class="pb_home_belowfold_panel panel_left">
-								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnMonetization.png" class="pb_panel_img">
-								</div>
-							
-								<div class="col-sm-8">
-									<h3>Maximize Earnings</h3>
-									<span>Bring additional advertiser demand into your ad server, ensuring you get the best possible price for your inventory.</span>
-								</div>
+									
+						<div class="pb_benefits">
+				
+							<div class="pb_benefits_title">
+								<h2>The Benefits Of Using Prebid</h2>
 							</div>
+			
 							
-							<div class="pb_home_belowfold_panel panel_right">
-								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnMultiPlatform.png" class="pb_panel_img">
-								</div>
-							
-								<div class="col-sm-8">
-									<h3>Use it Everywhere</h3>
-									<span>Apply header bidding to the most popular platforms and formats, including web, mobile app, video, native, AMP, and server-to-server.</span>
-								</div>
-							</div>
-							
-							<!-- second row-->
-						
-							<div class="pb_home_belowfold_panel panel_left">
-								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnGetStarted.png" class="pb_panel_img">
-								</div>
-							
-								<div class="col-sm-8">
-									<h3>Get Started Quickly</h3>
-									<span>Follow simple step-by-step instructions to download, integrate, and configure header bidding with Prebid.</span>
-								</div>
-							</div>
-							
-							<div class="pb_home_belowfold_panel panel_right">
-								<div class="col-sm-3">
-									<img src="/assets/images/icons/icnOpenSource.png" class="pb_panel_img">
-								</div>
-							
-								<div class="col-sm-8">
-									<h3>Join The Community</h3>
-									<span>Become part of our active community of advertising technology experts, where you can quickly resolve issues and contribute to the evolution of the leading header bidding solution.</span>
-								</div>
+							<div class="pb_benefits_row">
 								
+								<div class="pb_benefits_panel pb_benefits_panel_left">
+								
+									<div class="pb_benefits_img_wrapper">
+										<img src="/assets/images/icons/icnMonetization.png">
+									</div>
+									
+									<div class="pb_benefits_content">
+										<h3>Maximize Earnings</h3>
+										<span>Bring additional advertiser demand into your ad server, ensuring you get the best possible price for your inventory.</span>
+									</div>
+								
+								</div>
+							
+								<div class="pb_benefits_panel pb_benefits_panel_right">
+								
+									<div class="pb_benefits_img_wrapper">
+										<img src="/assets/images/icons/icnMultiPlatform.png">
+									</div>
+									
+									<div class="pb_benefits_content">
+										<h3>Use it Everywhere</h3>
+										<span>Apply header bidding to the most popular platforms and formats, including web, mobile app, video, native, AMP, and server-to-server.</span>
+									</div>
+									
+								</div>
+										
+							</div>
+								
+							<div class="pb_benefits_row">
+								
+								<div class="pb_benefits_panel pb_benefits_panel_left">
+								
+									<div class="pb_benefits_img_wrapper">
+										<img src="/assets/images/icons/icnGetStarted.png">
+									</div>
+									
+									<div class="pb_benefits_content">
+										<h3>Get Started Quickly</h3>
+										<span>Follow simple step-by-step instructions to download, integrate, and configure header bidding with Prebid.</span>
+									</div>
+								
+								</div>
+							
+								<div class="pb_benefits_panel pb_benefits_panel_right">
+								
+									<div class="pb_benefits_img_wrapper">
+										<img src="/assets/images/icons/icnOpenSource.png">
+									</div>
+									
+									<div class="pb_benefits_content">
+										<h3>Join The Community</h3>
+										<span>Become part of our active community of advertising technology experts, where you can quickly resolve issues and contribute to the evolution of the leading header</span>
+									</div>
+									
+								</div>
+										
 							</div>
 							
 						</div>
-						<!--end content box-->
+						<!--end pb-benfits-->
 					</div>
+					<!--end col-->
 				</div>
 				<!--end belowfold-->
 			</div>
@@ -93,50 +111,51 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="pb_home_belowfold_carousel">
-						<h2>Product Highlights</h2>
+						<h1 class="pb_carousel_title">Product Highlights</h1>
 						
-						<!--begin carousel-->
-						<div class="row mt centered">
-							<div class="col-lg-6 col-lg-offset-3">
-								<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+						<div id="myCarousel" class="carousel slide" data-ride="carousel">
+						  
+						  <!-- Wrapper for slides -->
+						  <div class="carousel-inner">
+						    <div class="item active">
+						      <h3>Prebid.js</h3>
+						      <h4>A feature-rich header bidding platform for the web, including more than 150 demand sources and 15 analytics adapters. Supports currency conversion, GDPR, common ID systems, and multiple ad servers.</h4>
+						    </div>
 						
-						          <!-- Wrapper for slides -->
-						          <div class="carousel-inner">
-						            <div class="item active">
-						              <h2>Prebid.js</h2>
-						              <h4>A feature-rich header bidding platform for the web, including more than 150 demand sources and 15 analytics adapters. Supports currency conversion, GDPR, common ID systems, and multiple ad servers.</h4>
-						            </div>
-						            <div class="item">
-						              <h2>Prebid Mobile SDK</h2>
-						              <h4>Header bidding for your iOS and Android apps. Combine Prebid SDK and Prebid Server for a great user experience and easy management.</h4>
-						            </div>
-						            <div class="item">
-						              <h2>Prebid Server</h2>
-						              <h4>A server-side header bidding solution with more than 20 demand sources. Hosted by a number of companies in highly available and geo-distributed clusters, Prebid Server lightens the load on browsers, while also enabling mobile app and AMP.</h4>
-						            </div>
-						            
-						            <!-- Indicators -->
-						          <ol class="carousel-indicators">
-						            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-						            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-						            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						          </ol>
-						          
-						          <!-- Indicators -->
-							          <div class="pb_carousel_indicators">
-								          <ol class="carousel-indicators">
-								            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-								            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-								            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-								          </ol>
-							          </div>
-							          
-						        </div>
-						        
-						        
-							</div>
+						    <div class="item">
+						      <h3>Prebid Mobile</h3>
+						      <h4>Header bidding for your iOS and Android apps. Combine Prebid SDK and Prebid Server for a great user experience and easy management.</h4>
+						    </div>
+						
+						    <div class="item">
+						      <h3>Prebid Server</h3>
+						      <h4>A server-side header bidding solution with more than 20 demand sources. Hosted by a number of companies in highly available and geo-distributed clusters, Prebid Server lightens the load on browsers, while also enabling mobile app and AMP.</h4>
+						    </div>
+						  </div>
+						  
+						  
+						
+						  <!-- Left and right controls
+						  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						    <span class="glyphicon glyphicon-chevron-left"></span>
+						    <span class="sr-only">Previous</span>
+						  </a>
+						  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+						    <span class="glyphicon glyphicon-chevron-right"></span>
+						    <span class="sr-only">Next</span>
+						  </a>
+						   -->
 						</div>
-						<!--end carousel-->
+						
+						<!-- Indicators -->
+						<div class="pb_carousel_indicators">
+						  <ol class="carousel-indicators">
+						    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						    <li data-target="#myCarousel" data-slide-to="1"></li>
+						    <li data-target="#myCarousel" data-slide-to="2"></li>
+						  </ol>
+						</div>
+						
 					</div>
 				</div>
 			</div>
