--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,65 +1,39 @@
 
 <div class="partners">
 	
-	<div class="title"><h3>Prebid.org Founding Members</h3></div>
-	<ul>
+	<div class="tableTitle"><h3>Prebid.org Members</h3></div>
+	<script type="text/javascript">
+	var memberData=[];
+	var idx=0;
 	
 	{% for item in site.data.partners %}
-	
-		{% if item.type == 0 %}
-		
-			<li><a href="{{item.link}}" target="_blank"><img src='{{item.imgURL}}' class="founders"></a></li>
-		
+		{% if item.type == 0 or item.type == 1 %}
+			memberData[idx]={};
+			memberData[idx].href="{{item.link}}";
+			memberData[idx].text="<img src=\"{{item.imgURL}}\" width=\"100\">";
+			idx++;
 		{% endif %}
-		
 	{% endfor %}
-	
-	</ul>
-	
-	<div class="title"><h3>Prebid.org Standard Members</h3></div>
-	<ul>
-	
-	{% for item in site.data.partners %}
-	
-		{% if item.type == 1 %}
-		
-			<li><a href="{{item.link}}" target="_blank"><img src='{{item.imgURL}}' class="standard"></a></li>
-		
-		{% endif %}
-		
-	{% endfor %}
-	
-	</ul>
-	
-	<div class="tableTitle"><h3>Other Partners</h3></div>
-				
-	<div id="container">
-		
-		<table class="table">
-			
-			{% assign bidderCount = site.bidders | size | divided_by: 4.0 | round %}
-			{% for i in (1..bidderCount) %}
-				
-			<tr>
-				
-				{% for c in (1..4) %}
-					
-					{% if i == 1 %}
-						{% assign modifier = c | minus: 1 %}
-						{% assign idx = i | plus:  modifier %}
-					{% else %}
-						{% assign x = c | minus: 1 %}
-						{% assign modifier = i | minus: 1 | times: 3 | plus:x%}
-						{% assign idx = i | plus: modifier  %}
-					{% endif %}
-				
-				<td><span>{{site.bidders[idx].title}}</span></td>
-				
-				{% endfor %}
+	</script>
 
-			</tr>
-			{% endfor %}
-		</table>
-	</div>	
+	<div id="memberTable"></div>
+	<script src="/assets/js/dynamicTable.js" data-div="memberTable" data-array="memberData" data-sort="rowFirst" type="text/javascript"></script>
+	
+	
+	<div class="tableTitle"><h3>Prebid.js Bidding Partners</h3></div>
+	<script type="text/javascript">
+	    var partnerData=[];
+	    idx=0;
+				
+	    {% for item in site.bidders %}
+		partnerData[idx]={};
+		partnerData[idx].href="/dev-docs/bidders.html#{{item.biddercode}}";
+		partnerData[idx].text="{{item.title}}";
+		idx++;
+	    {% endfor %}
+        </script>
+
+	<div id="partnerTable"></div>
+	<script src="/assets/js/dynamicTable.js" data-div="partnerTable" data-array="partnerData" type="text/javascript"></script>
 </div>
 
