--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,10 @@ a[href^="https://prebid.org/"]:after {
     hyphens: auto;
 }
 
+.cellpadding td {
+    padding: 10px;
+}
+
 hr {
   display: block;
   height: 1px;
