revised dev nav bar, misc fixes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
 					
 					<div class="header-links-item"><a href="/developers.html"><img src="/assets/images/svg/icn_developers.svg"></a><p>Developers</p></div>
 					<div class="header-links-item"><a href="/prebid/prebidjs.html"><img src="/assets/images/svg/icn_getstarted.svg" class="large"></a><p>Get Started!</p></div>
-					<div class="header-links-item"><a href="/adops.html"><img src="/assets/images/svg/icn_adops.svg"></a><p>Ad Ops</p></div>
+					<div class="header-links-item"><a href="/adops/before-you-start.html"><img src="/assets/images/svg/icn_adops.svg"></a><p>Ad Ops</p></div>
 				</div>
 			</div>
 			
