--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 	<div class="container-fluid">
 	  
 	  <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -14,7 +14,7 @@
     </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse collapse">
+    <div id="navbar" class="navbar-collapse collapse">
     	<ul class="nav navbar-nav navbar-right">
 	    	
 			{% for item in site.data.dropdowns %}
