Side nav on phone screens

--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -68,6 +68,7 @@
 			<div class="col-sm-9 pb-content" markdown="1">
 				
 					<button type="button" id="sidebarCollapse" class="btn btn-info pb_menu_btn">
+						<i class="fas fa-align-left"></i>
                         <span>Menu</span>
                     </button>
 									
